--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
     "next-themes": "^0.3.0",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1",
