--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.15",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1",
